--- a/docs-home.html
+++ b/docs-home.html
@@ -1,4 +1,4 @@
-<div style="margin-left: auto;margin-right: auto;width: 75%;">
+<div style="margin-left: auto;margin-right: auto;width: 60%;text-align: justify;">
     <h1>Welcome to the Math Codex</h1>
     <p>
         The Math Codex is a free and open repository of mathematical
